kubernetes/examples/day6/k8s/ingress/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: webapp
spec:
  type: NodePort
  selector:
    app: flask-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
    nodePort: 30800
